fixed fontconfig complaints

--- a/51-local.conf
+++ b/51-local.conf
@@ -177,12 +177,10 @@
 	-->
 	<match target="font">
 		
-		<test qual="any" name="family" compare="eq">
-			<string>Franklin Gothic Medium</string>
-			<string>Frutiger Linotype</string>
+	  <test qual="any" name="family" compare="eq"><string>Franklin Gothic Medium</string></test>
+	  <test qual="any" name="family" compare="eq"> <string>Frutiger Linotype</string></test>
 			<!-- Lucida Sans Unicode has no italic and uses artificial oblique -->
-			<string>Lucida Sans Unicode</string>
-		</test>
+			<test qual="any" name="family" compare="eq"><string>Lucida Sans Unicode</string></test>
 		
 		<test qual="any" name="pixelsize" compare="less_eq">
 			<double>13.4</double>
@@ -234,17 +232,15 @@
 		In chrome 13px evalutes to 17.4px pixelsize test, funny!
 	-->
 	<match target="font">
-		<test qual="any" name="family" compare="eq">
-			<string>Georgia</string>
-			<string>Lucida Sans</string>
-			<string>Lucida Sans Typewriter</string>
+			<test qual="any" name="family" compare="eq"><string>Georgia</string></test>
+			<test qual="any" name="family" compare="eq"><string>Lucida Sans</string></test>
+			<test qual="any" name="family" compare="eq"><string>Lucida Sans Typewriter</string></test>
 			<!-- Microsoft Sans Serif has no italic and uses artificial oblique -->
-			<string>Microsoft Sans Serif</string>
+			<test qual="any" name="family" compare="eq"><string>Microsoft Sans Serif</string></test>
 			<!-- Tahoma has no italic and uses artificial oblique -->
-			<string>Tahoma</string>
-			<string>Trebuchet MS</string>
-			<string>Verdana</string>
-		</test>
+			<test qual="any" name="family" compare="eq"><string>Tahoma</string></test>
+			<test qual="any" name="family" compare="eq"><string>Trebuchet MS</string></test>
+			<test qual="any" name="family" compare="eq"><string>Verdana</string></test>
 		<test qual="any" name="pixelsize" compare="less_eq">
 			<double>16.1</double>
 		</test>
@@ -264,19 +260,18 @@
 		font group #4: normal roman anti-aliased above 13pt/17.4px
 	-->
 	<match target="font">
-		<test qual="any" name="family" compare="eq">
-			<string>Arial</string>
-			<string>Arial Narrow</string>
-			<string>Berling Antiqua</string>
-			<string>Book Antiqua</string>
-			<string>Bookman Old Style</string>
-			<string>Garamond</string>
-			<!-- Lucida Console has no italic and uses artificial oblique -->
-			<string>Lucida Console</string>
-			<string>Palatino Linotype</string>
-			<string>SylfaenARM</string>
-			<string>Times New Roman</string>
-		</test>
+		<test qual="any" name="family" compare="eq"><string>Arial</string></test>
+		<test qual="any" name="family" compare="eq"><string>Arial Narrow</string></test>
+		<test qual="any" name="family" compare="eq"><string>Berling Antiqua</string></test>
+		<test qual="any" name="family" compare="eq"><string>Book Antiqua</string></test>
+		<test qual="any" name="family" compare="eq"><string>Bookman Old Style</string></test>
+		<test qual="any" name="family" compare="eq"><string>Garamond</string></test>
+		<!-- Lucida Console has no italic and uses artificial oblique -->
+		<test qual="any" name="family" compare="eq"><string>Lucida Console</string></test>
+		<test qual="any" name="family" compare="eq"><string>Palatino Linotype</string></test>
+		<test qual="any" name="family" compare="eq"><string>SylfaenARM</string></test>
+		<test qual="any" name="family" compare="eq"><string>Times New Roman</string></test>
+		
 		<test qual="any" name="pixelsize" compare="less_eq">
 			<double>17.4</double>
 		</test>
@@ -295,10 +290,8 @@
 		font group #5: normal roman anti-aliased above 16pt/21.4px
 	-->
 	<match target="font">
-	<test qual="any" name="family" compare="eq">
-	<string>Century Gothic</string>
-	<string>Kartika</string>
-	</test>
+	<test qual="any" name="family" compare="eq"><string>Century Gothic</string></test>
+	<test qual="any" name="family" compare="eq"><string>Kartika</string></test>
 	<test qual="any" name="pixelsize" compare="less_eq">
 	<double>21.4</double>
 	</test>
@@ -380,31 +373,27 @@
 		font group #9: bold roman anti-aliased above 10pt/13.4px
 	-->
 	<match target="font">
-	<test qual="any" name="family" compare="eq">
-	<string>Tahoma</string>
-	<string>Verdana</string>
-	</test>
-	<test qual="any" name="pixelsize" compare="less_eq">
-	<double>13.4</double>
-	</test>
-	<test qual="any" name="weight" compare="more">
-	<const>medium</const>
-	</test>
-	<test qual="any" name="slant" compare="eq">
-	<const>roman</const>
-	</test>
-	<edit name="antialias" mode="assign">
-	<bool>false</bool>
-	</edit>
+	  <test qual="any" name="family" compare="eq"><string>Tahoma</string></test>
+	  <test qual="any" name="family" compare="eq"><string>Verdana</string></test>
+	  <test qual="any" name="pixelsize" compare="less_eq">
+	    <double>13.4</double>
+	  </test>
+	  <test qual="any" name="weight" compare="more">
+	    <const>medium</const>
+	  </test>
+	  <test qual="any" name="slant" compare="eq">
+	    <const>roman</const>
+	  </test>
+	  <edit name="antialias" mode="assign">
+	    <bool>false</bool>
+	  </edit>
 	</match>
 
 	<!--
 		font group #10: bold roman anti-aliased above 12pt/16px
 	-->
 	<match target="font">
-	<test qual="any" name="family" compare="eq">
-	<string>Courier New</string>
-	</test>
+	<test qual="any" name="family" compare="eq"><string>Courier New</string></test>
 	<test qual="any" name="pixelsize" compare="less_eq">
 	<double>16</double>
 	</test>
@@ -444,30 +433,27 @@
 		font group #11: hinted via Auto-Hinter
 	-->
 	<match target="font">
-		<test qual="any" name="family" compare="eq">
-			<string>Bitstream Charter</string>
-			<string>Courier 10 Pitch</string>
-			<string>DejaVu Sans Condensed</string>
-			<string>DejaVu Serif Condensed</string>
-			<string>FreeMono</string>
-			<string>FreeSans</string>
-			<string>FreeSerif</string>
-			<string>Luxi Mono</string>
-			<string>Luxi Sans</string>
-			<string>Luxi Serif</string>
-			<string>MgOpen Canonica</string>
-			<string>MgOpen Cosmetica</string>
-			<string>MgOpen Modata</string>
-			<string>MgOpen Moderna</string>
-			<string>URW Bookman L</string>
-			<string>URW Chancery L</string>
-			<string>URW Gothic L</string>
-			<string>URW Palladio L</string>
-		</test>
-		
-		<edit name="autohint" mode="assign">
-			<bool>true</bool>
-		</edit>
+	  <test qual="any" name="family" compare="eq"><string>Bitstream Charter</string></test>
+	  <test qual="any" name="family" compare="eq"><string>Courier 10 Pitch</string></test>
+	  <test qual="any" name="family" compare="eq"><string>DejaVu Sans Condensed</string></test>
+	  <test qual="any" name="family" compare="eq"><string>DejaVu Serif Condensed</string></test>
+	  <test qual="any" name="family" compare="eq"><string>FreeMono</string></test>
+	  <test qual="any" name="family" compare="eq"><string>FreeSans</string></test>
+	  <test qual="any" name="family" compare="eq"><string>FreeSerif</string></test>
+	  <test qual="any" name="family" compare="eq"><string>Luxi Mono</string></test>
+	  <test qual="any" name="family" compare="eq"><string>Luxi Sans</string></test>
+	  <test qual="any" name="family" compare="eq"><string>Luxi Serif</string></test>
+	  <test qual="any" name="family" compare="eq"><string>MgOpen Canonica</string></test>
+	  <test qual="any" name="family" compare="eq"><string>MgOpen Cosmetica</string></test>
+	  <test qual="any" name="family" compare="eq"><string>MgOpen Modata</string></test>
+	  <test qual="any" name="family" compare="eq"><string>MgOpen Moderna</string></test>
+	  <test qual="any" name="family" compare="eq"><string>URW Bookman L</string></test>
+	  <test qual="any" name="family" compare="eq"><string>URW Chancery L</string></test>
+	  <test qual="any" name="family" compare="eq"><string>URW Gothic L</string></test>
+	  <test qual="any" name="family" compare="eq"><string>URW Palladio L</string></test>
+	  <edit name="autohint" mode="assign">
+	    <bool>true</bool>
+	  </edit>
 	</match>
 
 	<!--
@@ -480,6 +466,7 @@
 	<string>Arial</string>
 	</test>
 	<test qual="any" name="pixelsize" compare="more_eq">
+
 	<double>12</double>
 	</test>
 	<test qual="any" name="pixelsize" compare="less_eq">
@@ -523,14 +510,12 @@
 		font group #14: normal italic hinted via Auto-Hinter at all sizes
 	-->
 	<match target="font">
-	<test qual="any" name="family" compare="eq">
 	<!-- 10, 11, 12 -->
-	<string>Frutiger Linotype</string>
+	<test qual="any" name="family" compare="eq"><string>Frutiger Linotype</string></test>
 	<!--  8-9: 'z', '2'; 10-15, 17, 19: 'z' -->
-	<string>Times New Roman</string>
+	<test qual="any" name="family" compare="eq"><string>Times New Roman</string></test>
 	<!-- 9-10: 'N' 'Q'; 12: 'w', 'C', 'D', 'O', 'Q', 'R', '2', '9', '0' -->
-	<string>Verdana</string>
-	</test>
+	<test qual="any" name="family" compare="eq"><string>Verdana</string></test>
 	<test qual="any" name="weight" compare="less_eq">
 	<const>medium</const>
 	</test>
@@ -1311,10 +1296,8 @@
 		true leads to clarity loss
 	-->
 	<match target="font">
-		<test qual="any" name="family" compare="eq">
-			<string>Droid Sans</string>
-			<string>Droid Sans Mono</string>
-		</test>
+		<test qual="any" name="family" compare="eq"><string>Droid Sans</string></test>
+	        <test qual="any" name="family" compare="eq"><string>Droid Sans Mono</string></test>
 		<edit mode="assign" name="autohint">
 			<bool>false</bool>
 		</edit>
@@ -1442,14 +1425,11 @@
 
 	<!-- replace times new roman with droid serif -->
 	<match target="pattern">
-		<test qual="any" name="family" compare="eq">
-			<string>Times New Roman</string>
-			<string>serif</string>
-		</test>
-		
-		<edit name="family" mode="prepend" binding="same">
+		  <test qual="any" name="family" compare="eq"><string>Times New Roman</string></test>
+		  <test qual="any" name="family" compare="eq"><string>serif</string></test>
+		  <edit name="family" mode="prepend" binding="same">
 			<string>Droid Serif</string>
-		</edit>
+		  </edit>
 	</match>
 	
 	
@@ -1520,10 +1500,8 @@
 
 	<!-- do some antialiasing tweak for gargi and lohit hindi font -->
 	<match target="font">
-		<test compare="eq" name="family" qual="any">
-			<string>gargi</string>
-			<string>Lohit Hindi</string>
-		</test>
+	  <test qual="any" name="family" compare="eq"><string>gargi</string></test>
+	<test compare="eq" name="family" qual="any"><string>Lohit Hindi</string></test>
 		<edit mode="assign" name="antialias">
 			<bool>true</bool>
 		</edit>
