more touchpad tweaks

--- a/50-synaptics.conf
+++ b/50-synaptics.conf
@@ -58,7 +58,7 @@ Section "InputClass"
 		Option "VertScrollDelta" "80"
 		Option "CoastingSpeed" "0"
 		Option "FingerHigh" "20"
-		Option "FingerLow" "15"
+		Option "FingerLow" "2"
 		Option "MaxTapTime" "100"
 		Option "MaxDoubleTapTime" "200"
 		Option "MaxTapTime" "200"
@@ -71,4 +71,8 @@ Section "InputClass"
 		Option "RightEdge" "4789"
 		Option "HorizHysteresis" "20"
 		Option "VertHysteresis" "20"
+		Option "AccelFactor" "0.06"
+		Option "MaxSpeed" "2"
+		Option "LockedDrags" "1"
+		Option "LockedDragTimeout" "4000"
 EndSection
