--- a/.screenrc
+++ b/.screenrc
@@ -19,7 +19,7 @@ defscrollback 30000
 # allow bold colors - necessary for some reason
 attrcolor b ".I" 
 # tell screen how to set colors. AB = background, AF=foreground 
-termcapinfo xterm 'Co#256:AB=\E[48;5;%dm:AF=\E[38;5;%dm' 
+#termcapinfo xterm 'Co#256:AB=\E[48;5;%dm:AF=\E[38;5;%dm' 
 # erase background with current bg color 
 defbce "on"
 
