--- a/.gitconfig
+++ b/.gitconfig
@@ -1,15 +1,31 @@
 [push]
 	default = tracking
+
 [user]
 	email = dpak.cherian@gmail.com
 	name = deepak
+
 [alias]
-    lg = log --all --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset'\n--abbrev-commit --date=relative
+	lg = log --all --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset'\n--abbrev-commit --date=relative
+	d = diff
+	dc = diff --cached
+	gl = log --oneline --decorate --stat --graph
+	st = status -sb
+	whatis = show -s --pretty='tformat:%h (%s, %ad)' --date=short
+
 [core]
 	editor = emacsclient -t
+
 [merge]
 	tool = meld
+
 [credential]
 	helper = cache --timeout=432000
+
 [color]
 	ui = true
+	diff = auto
+	status = auto
+
+[status]
+	relativePaths = false
