--- a/.gitconfig
+++ b/.gitconfig
@@ -13,12 +13,15 @@
 	st = status -sb
 	whatis = show -s --pretty='tformat:%h (%s, %ad)' --date=short
 	ap = add -p
+	unstage = reset HEAD
+	uncommit = reset --soft HEAD^
 
 [core]
 	editor = emacsclient -t
 
 [merge]
 	tool = meld
+	summary = true
 
 [credential]
 	helper = cache --timeout=432000
@@ -27,6 +30,8 @@
 	ui = true
 	diff = auto
 	status = auto
+	branch = auto
+	interactive = auto
 
 [help]
 	autocorrect = 1
@@ -34,3 +39,9 @@
 [status]
 	relativePaths = false
 	submodulesummary = true
+
+[gc]
+	auto = 1
+
+[diff]
+	mnemonicprefix = true
