--- a/.gitconfig
+++ b/.gitconfig
@@ -15,6 +15,8 @@
 	ap = add -p
 	unstage = reset HEAD
 	uncommit = reset --soft HEAD^
+	cm = commit
+	co = checkout
 
 [core]
 	editor = emacsclient -t
