--- a/.inputrc
+++ b/.inputrc
@@ -1,2 +1,23 @@
+$include /etc/inputrc
+
 set completion-ignore-case on
 set show-all-if-ambiguous on
+set mark-symlinked-directories on
+set skip-completed-text on
+set enable-keypad on
+set editing-mode emacs
+
+set completion-prefix-display-length 2
+
+"\eOA": history-search-backward
+"\eOB": history-search-forward
+#"\e[1~": beginning-of-line
+#"\e[4~": end-of-line
+#"\e[5~": beginning-of-history
+#"\e[6~": end-of-history
+#"\e[3~": delete-char
+#"\e[2~": quoted-insert
+"\C-\eOC": forward-word
+"\C-\eOD": backward-word
+#"\e\e[C": forward-word
+#"\e\e[D": backward-word
