--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,7 +39,7 @@ bind - split-window -v
 set-option -g status-utf8 on
 set-option -g status-justify centre
 set-option -g status-bg default
-set-option -g status-fg white
+set-option -g status-fg cyan
 set-option -g status-left-length 40
 set-option -g status-right-length 80
 
@@ -49,7 +49,7 @@ set-option -g pane-border-fg black
 set-option -g pane-border-bg black
 
 set-option -g message-fg black
-set-option -g message-bg green
+set-option -g message-bg brightcyan
 
 #setw -g mode-bg black
 
@@ -64,7 +64,7 @@ setw -g window-status-activity-fg yellow
 setw -g xterm-keys on
 
 set -g status-interval 5
-set -g status-left '#[fg=green][ #[fg=red]#H#[fg=green]:#[fg=white]#S #[fg=green]][#[default]'
+set -g status-left '#[fg=green][ #[fg=red]#H#[fg=green] #[fg=green]][#[default]'
 set -g status-right '#[fg=green]][#[fg=black] #(tmux-mem-cpu-load 5 4) #[fg=green]][ #[fg=yellow]%H:%M:%S #[fg=green]]#[default]'
 
 set -g history-limit 4096
